--- a/about.html
+++ b/about.html
@@ -13,8 +13,7 @@
         <a href="rock.html">Rock</a>
     </nav>
     <div class="content">
-        <h1>Rock Music</h1>
-        <i><h2><p>c'mon; we all know it sucks!</p></h2></i>
+        <h1>Rock Music</h1
         <img src="rock2.jpeg" alt="Rock Music Image"style="width:1400px;height:900px;">
         <!-- Add more content here -->
     </div>
